# projecter

./: .gitignore  README.md  collect.py  distribute.py  gitignore  main.py  projecter.py  pyproject.toml
.claude/: settings.local.json
src/: collect.py  config.json  merge2.py  project.py
src/mytool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/projecter/: __init__.py  __main__.py  cli.py  collect.py  diff.py  distribute.py  matcher.py  scanner.py
test/: test.ipynb
test-note/: .vs.md  .vscode.md  c.md  projecter.md  projecter.md.backup  数学建模.md  数学建模.md.backup  新建文件夹.md
test/c/: 2.c  README.md
test/c/a/: README.md
test/c/b/: README.md
test/新建文件夹/: README.md  README.md.backup  a.py
