[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "projecter"
version = "2.0.0"
authors = [
    { name="Kaelvio", email="sun_don@foxmail.com" }
]
description = "Manage project README and notes synchronization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0"
]

[project.scripts]
projecter = "projecter.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
